--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>AI-techlub</title>
-  <meta name="description" content="">  
-  <meta name="keywords" content="">
+<title>AI-techlub | AI-Powered SaaS Platform for Intelligent Business Automation</title>
+<meta name="description" content="AI-techlub is a cloud-native SaaS company delivering scalable, secure, and intelligent software solutions for modern businesses. Experience innovation with our unified platform.">
+<meta property="og:title" content="AI-techlub | AI-Powered SaaS Platform for Intelligent Business Automation">
+  <meta property="og:description"  content="AI-techlub is a cloud-native SaaS company delivering scalable, secure, and intelligent software solutions for modern businesses. Experience innovation with our unified platform.">
+<meta property="og:url" content="https://ai-techlub.vercel.app">
+<meta name="keywords" content="SaaS, cloud platform, AI software, business automation, payroll, smart booking">
 
   <!-- Favicons -->
   <link href="./logo.svg" rel="icon">
@@ -17,35 +20,17 @@
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <!-- <link href="./src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="./src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="./src/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="./src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="./src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
-
-  <!-- Main CSS File -->
-  <!-- <link href="./src/assets/css/main.css" rel="stylesheet"> -->
-
-  <!-- =======================================================
-  * Template Name: QuickStart
-  * Template URL: https://bootstrapmade.com/quickstart-bootstrap-startup-website-template/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  <!-- Google site verification
   ======================================================== -->
+  <meta name="google-site-verification" content="abc123XYZ..." />
+
+  <link rel="canonical" href="https://ai-techlub.vercel.app" />
+
+
 </head>
 
 <body >
-    <!-- Vendor JS Files -->
-  <!-- <script src="./src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="./src/assets/vendor/php-email-form/validate.js"></script>
-  <script src="./src/assets/vendor/aos/aos.js"></script>
-  <script src="./src/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="./src/assets/vendor/swiper/swiper-bundle.min.js"></script> -->
 
-  <!-- Main JS File -->
-  <!-- <script src="./src/assets/js/main.js"></script> -->
 
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
