added google verify

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Google site verification
   ======================================================== -->
-  <meta name="google-site-verification" content="abc123XYZ..." />
+<meta name="google-site-verification" content="googleeac237d2d07d988c" />
 
   <link rel="canonical" href="https://ai-techlub.vercel.app" />
 
