--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Google site verification
   ======================================================== -->
-<meta name="google-site-verification" content="googleeac237d2d07d988c" />
+<meta name="google-site-verification" content="google657fc759e1d5d77f" />
 
   <link rel="canonical" href="https://ai-techlub.vercel.app" />
 
