--- a/index.html
+++ b/index.html
@@ -2,32 +2,56 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<title>AI-techlub | AI-Powered SaaS Platform for Intelligent Business Automation</title>
-<meta name="description" content="AI-techlub is a cloud-native SaaS company delivering scalable, secure, and intelligent software solutions for modern businesses. Experience innovation with our unified platform.">
-<meta property="og:title" content="AI-techlub | AI-Powered SaaS Platform for Intelligent Business Automation">
-  <meta property="og:description"  content="AI-techlub is a cloud-native SaaS company delivering scalable, secure, and intelligent software solutions for modern businesses. Experience innovation with our unified platform.">
-<meta property="og:url" content="https://ai-techlub.vercel.app">
-<meta name="keywords" content="SaaS, cloud platform, AI software, business automation, payroll, smart booking">
+  <!-- Basic Meta -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI-techlub | AI-Powered SaaS Platform for Intelligent Business Automation</title>
+  <meta name="description" content="AI-techlub is a cloud-native SaaS company delivering scalable, secure, and intelligent software solutions for modern businesses. Experience innovation with our unified platform." />
+  <meta name="keywords" content="SaaS, cloud platform, AI software, business automation, payroll, smart booking" />
 
-  <!-- Favicons -->
-  <link href="./logo.svg" rel="icon">
-  <link href="./logo.svg" rel="apple-touch-icon">
-
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
-  <!-- Google site verification
-  ======================================================== -->
-<meta name="google-site-verification" content="google657fc759e1d5d77f" />
-
+  <!-- Canonical -->
   <link rel="canonical" href="https://ai-techlub.vercel.app" />
 
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="google657fc759e1d5d77f" />
 
+  <!-- Favicon -->
+  <link rel="icon" href="/logo.png" />
+  <link rel="apple-touch-icon" href="/logo.png" />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+
+  <!-- Open Graph Meta (Social Sharing) -->
+  <meta property="og:title" content="AI-techlub | AI-Powered SaaS Platform for Intelligent Business Automation" />
+  <meta property="og:description" content="AI-techlub is a cloud-native SaaS company delivering scalable, secure, and intelligent software solutions for modern businesses. Experience innovation with our unified platform." />
+  <meta property="og:url" content="https://ai-techlub.vercel.app" />
+  <meta property="og:image" content="https://ai-techlub.vercel.app/logo.png" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="AI-techlub | AI-Powered SaaS Platform" />
+  <meta name="twitter:description" content="AI-techlub delivers scalable, secure, and intelligent software solutions." />
+  <meta name="twitter:image" content="https://ai-techlub.vercel.app/logo.png" />
+
+  <!-- Organization Schema (Logo for Google) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "AI Techlub",
+    "url": "https://ai-techlub.vercel.app",
+    "logo": "https://ai-techlub.vercel.app/logo.png",
+    "sameAs": [
+      "https://www.linkedin.com/company/ai-techlub/"
+    ]
+  }
+  </script>
 </head>
+
 
 <body >
 
