--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
   <!-- Basic Meta -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI-techlub | AI-Powered SaaS Platform for Intelligent Business Automation</title>
+  <title>AI Techlub | AI-Powered SaaS Platform for Intelligent Business Automation</title>
   <meta name="description" content="AI-techlub is a cloud-native SaaS company delivering scalable, secure, and intelligent software solutions for modern businesses. Experience innovation with our unified platform." />
   <meta name="keywords" content="SaaS, cloud platform, AI software, business automation, payroll, smart booking" />
+  <meta name="theme-color" content="#0F172A" />
 
   <!-- Canonical -->
   <link rel="canonical" href="https://ai-techlub.vercel.app" />
 
-  <!-- Google Site Verification -->
+  <!-- Google Verification -->
   <meta name="google-site-verification" content="google657fc759e1d5d77f" />
 
-  <!-- Favicon -->
-  <link rel="icon" href="/logo.png" />
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/logo-32.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/logo-192.png">
   <link rel="apple-touch-icon" href="/logo.png" />
 
   <!-- Fonts -->
@@ -33,11 +35,11 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="AI-techlub | AI-Powered SaaS Platform" />
-  <meta name="twitter:description" content="AI-techlub delivers scalable, secure, and intelligent software solutions." />
+  <meta name="twitter:title" content="AI Techlub | AI-Powered SaaS Platform" />
+  <meta name="twitter:description" content="AI-Techlub delivers scalable, secure software solutions." />
   <meta name="twitter:image" content="https://ai-techlub.vercel.app/logo.png" />
 
-  <!-- Organization Schema (Logo for Google) -->
+  <!-- Organization Schema -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -46,18 +48,35 @@
     "url": "https://ai-techlub.vercel.app",
     "logo": "https://ai-techlub.vercel.app/logo.png",
     "sameAs": [
-      "https://www.linkedin.com/company/ai-techlub/"
+      "https://www.linkedin.com/company/ai-techlub",
+      "https://www.instagram.com/aitechlub",
+      "https://www.threads.net/@aitechlub"
     ]
   }
   </script>
+
+  <!-- Website Schema (Search Sitelink) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://ai-techlub.vercel.app",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://ai-techlub.vercel.app/?search={search_term}",
+      "query-input": "required name=search_term"
+    }
+  }
+  </script>
+
 </head>
 
 
 <body >
 
 
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
 
 
 
