--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <!-- Basic Meta -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Techlub | AI-Powered SaaS Platform for Intelligent Business Automation</title>
-  <meta name="description" content="AI-techlub is a cloud-native SaaS company delivering scalable, secure, and intelligent software solutions for modern businesses. Experience innovation with our unified platform." />
+  <title>Shindentech | AI-Powered SaaS Platform for Intelligent Business Automation</title>
+  <meta name="description" content="Shindentech is a cloud-native SaaS company delivering scalable, secure, and intelligent software solutions for modern businesses. Experience innovation with our unified platform." />
   <meta name="keywords" content="SaaS, cloud platform, AI software, business automation, payroll, smart booking" />
   <meta name="theme-color" content="#0F172A" />
 
@@ -35,8 +35,8 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="AI Techlub | AI-Powered SaaS Platform" />
-  <meta name="twitter:description" content="AI-Techlub delivers scalable, secure software solutions." />
+  <meta name="twitter:title" content="Shindentech | AI-Powered SaaS Platform" />
+  <meta name="twitter:description" content="Shindentech delivers scalable, secure software solutions." />
   <meta name="twitter:image" content="https://ai-techlub.vercel.app/logo.png" />
 
   <!-- Organization Schema -->
@@ -44,7 +44,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Organization",
-    "name": "AI Techlub",
+    "name": "Shindentech",
     "url": "https://ai-techlub.vercel.app",
     "logo": "https://ai-techlub.vercel.app/logo.png",
     "sameAs": [
