--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
 
   <!-- Open Graph Meta (Social Sharing) -->
-  <meta property="og:title" content="AI-techlub | AI-Powered SaaS Platform for Intelligent Business Automation" />
-  <meta property="og:description" content="AI-techlub is a cloud-native SaaS company delivering scalable, secure, and intelligent software solutions for modern businesses. Experience innovation with our unified platform." />
+  <meta property="og:title" content="Shindentech | AI-Powered SaaS Platform for Intelligent Business Automation" />
+  <meta property="og:description" content="Shindentech is a cloud-native SaaS company delivering scalable, secure, and intelligent software solutions for modern businesses. Experience innovation with our unified platform." />
   <meta property="og:url" content="https://ai-techlub.vercel.app" />
   <meta property="og:image" content="https://ai-techlub.vercel.app/logo.png" />
   <meta property="og:type" content="website" />
