--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="canonical" href="https://ai-techlub.vercel.app" />
 
   <!-- Google Verification -->
-  <meta name="google-site-verification" content="google657fc759e1d5d77f" />
+  <meta name="google-site-verification" content="IMSUj0PCWUa6KY7l-kMPA4pgw_fBohpZ_Ms8xkpBTCk" />
 
   <!-- Favicons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/logo-32.png">
