--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Meta -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shindentech | AI-Powered SaaS Platform for Intelligent Business Automation</title>
+  <title>ShindenTech | AI-Powered SaaS Platform for Intelligent Business Automation</title>
   <meta name="description" content="Shindentech is a cloud-native SaaS company delivering scalable, secure, and intelligent software solutions for modern businesses. Experience innovation with our unified platform." />
   <meta name="keywords" content="SaaS, cloud platform, AI software, business automation, payroll, smart booking" />
   <meta name="theme-color" content="#0F172A" />
@@ -48,7 +48,7 @@
     "url": "https://ai-techlub.vercel.app",
     "logo": "https://ai-techlub.vercel.app/logo.png",
     "sameAs": [
-      "https://www.linkedin.com/company/ai-techlub",
+      "https://www.linkedin.com/company/shindentech",
       "https://www.instagram.com/aitechlub",
       "https://www.threads.net/@aitechlub"
     ]
