--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="#0F172A" />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://ai-techlub.vercel.app" />
+  <link rel="canonical" href="https://shindentech.vercel.app" />
 
   <!-- Google Verification -->
   <meta name="google-site-verification" content="IMSUj0PCWUa6KY7l-kMPA4pgw_fBohpZ_Ms8xkpBTCk" />
@@ -29,15 +29,15 @@
   <!-- Open Graph Meta (Social Sharing) -->
   <meta property="og:title" content="Shindentech | AI-Powered SaaS Platform for Intelligent Business Automation" />
   <meta property="og:description" content="Shindentech is a cloud-native SaaS company delivering scalable, secure, and intelligent software solutions for modern businesses. Experience innovation with our unified platform." />
-  <meta property="og:url" content="https://ai-techlub.vercel.app" />
-  <meta property="og:image" content="https://ai-techlub.vercel.app/logo.png" />
+  <meta property="og:url" content="https://shindentech.vercel.app" />
+  <meta property="og:image" content="https://shindentech.vercel.app/logo.png" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Shindentech | AI-Powered SaaS Platform" />
   <meta name="twitter:description" content="Shindentech delivers scalable, secure software solutions." />
-  <meta name="twitter:image" content="https://ai-techlub.vercel.app/logo.png" />
+  <meta name="twitter:image" content="https://shindentech.vercel.app/logo.png" />
 
   <!-- Organization Schema -->
   <script type="application/ld+json">
@@ -45,8 +45,8 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "Shindentech",
-    "url": "https://ai-techlub.vercel.app",
-    "logo": "https://ai-techlub.vercel.app/logo.png",
+    "url": "https://shindentech.vercel.app",
+    "logo": "https://shindentech.vercel.app/logo.png",
     "sameAs": [
       "https://www.linkedin.com/company/shindentech",
       "https://www.instagram.com/aitechlub",
@@ -60,10 +60,10 @@
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
-    "url": "https://ai-techlub.vercel.app",
+    "url": "https://shindentech.vercel.app",
     "potentialAction": {
       "@type": "SearchAction",
-      "target": "https://ai-techlub.vercel.app/?search={search_term}",
+      "target": "https://shindentech.vercel.app/?search={search_term}",
       "query-input": "required name=search_term"
     }
   }
