added preview image

--- a/index.html
+++ b/index.html
@@ -30,14 +30,22 @@
   <meta property="og:title" content="Shindentech | AI-Powered SaaS Platform for Intelligent Business Automation" />
   <meta property="og:description" content="Shindentech is a cloud-native SaaS company delivering scalable, secure, and intelligent software solutions for modern businesses. Experience innovation with our unified platform." />
   <meta property="og:url" content="https://shindentech.vercel.app" />
-  <meta property="og:image" content="https://shindentech.vercel.app/logo.png" />
+<meta property="og:image" content="https://shindentech.vercel.app/preview.jpg" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
   <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Shindentech" />
+<meta property="og:locale" content="en_US" />
+<meta property="og:image:type" content="image/jpeg" />
+<meta property="og:image:secure_url" content="https://shindentech.vercel.app/preview.jpg" />
 
   <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Shindentech | AI-Powered SaaS Platform" />
-  <meta name="twitter:description" content="Shindentech delivers scalable, secure software solutions." />
-  <meta name="twitter:image" content="https://shindentech.vercel.app/logo.png" />
+ <!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Shindentech | AI-Powered SaaS Platform" />
+<meta name="twitter:description" content="Cloud-native SaaS delivering scalable, secure, and intelligent business automation." />
+<meta name="twitter:image" content="https://shindentech.vercel.app/preview.jpg" />
+<meta name="twitter:url" content="https://shindentech.vercel.app" />
 
   <!-- Organization Schema -->
   <script type="application/ld+json">
@@ -49,8 +57,8 @@
     "logo": "https://shindentech.vercel.app/logo.png",
     "sameAs": [
       "https://www.linkedin.com/company/shindentech",
-      "https://www.instagram.com/aitechlub",
-      "https://www.threads.net/@aitechlub"
+      "https://www.instagram.com/shindentech",
+      "https://www.threads.net/@shindentech"
     ]
   }
   </script>
